--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,7 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" /> {/* TODO: Añadir descripción por defecto o pasarla como prop */}
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" /> {/* Asegúrate de tener un favicon.ico en /public */}
+		<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title} | AutomationAI Solutions</title> {/* Título dinámico */}
 	</head>
